--- a/Amex_Credit_Default.ipynb
+++ b/Amex_Credit_Default.ipynb
@@ -6,7 +6,8 @@
       "name": "Amex-Credit-Default.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNxH0TykKCVtCPnwXVRCzE1",
+      "machine_shape": "hm",
+      "authorship_tag": "ABX9TyMmWA42JvnpYVm8luSKIYp4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +32,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## American Express Fraud Detection Competition\n",
+        "# American Express Fraud Detection Competition\n",
         "\n",
         "Credit default prediction is central to managing risk in a consumer lending business. Credit default prediction allows lenders to optimize lending decisions, which leads to a better customer experience and sound business economics.\n",
         "\n",
@@ -41,7 +42,7 @@
         "\n",
         "1. Loading the data\n",
         "2. Exploratory Data Analysis \n",
-        "3. Pre-Processing/Feature Engineering\n",
+        "# 3. Pre-Processing/Feature Engineering\n",
         "4. Train-Test Split\n",
         "5. Model Selection\n",
         "6. Model Tuning\n",
@@ -55,7 +56,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 1.0 Data Loading"
+        "### 1.0 Data Loading"
       ],
       "metadata": {
         "id": "bXgiLeH2GlMH"
@@ -64,7 +65,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "First lets download the data into Colab from Kaggle"
+        "First lets download the AMEX data into Colab from the local machine"
       ],
       "metadata": {
         "id": "T-Da-GoSNb-k"
@@ -72,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "resources": {
@@ -90,10 +91,10 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 74
+          "height": 410
         },
         "id": "w-r0dZVKGhQJ",
-        "outputId": "e8b2fe97-eeba-4686-e8ab-8352ac099521"
+        "outputId": "69dde6d6-1f0f-46bf-f1d5-e06db67321c8"
       },
       "outputs": [
         {
@@ -104,9 +105,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-be51dc2d-67e9-4fc9-babc-3d08198c1a9a\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-5a54922f-6799-49ba-bb80-675eac48a34d\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-be51dc2d-67e9-4fc9-babc-3d08198c1a9a\">\n",
+              "     <output id=\"result-5a54922f-6799-49ba-bb80-675eac48a34d\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -116,10 +117,18 @@
           "metadata": {}
         },
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saving kaggle.json to kaggle.json\n"
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-21dc3c638f66>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0muploaded\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/google/colab/files.py\u001b[0m in \u001b[0;36mupload\u001b[0;34m()\u001b[0m\n\u001b[1;32m     44\u001b[0m   \"\"\"\n\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m   \u001b[0muploaded_files\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_upload_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmultiple\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m   \u001b[0;31m# Mapping from original filename to filename as saved locally.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m   \u001b[0mlocal_filenames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/google/colab/files.py\u001b[0m in \u001b[0;36m_upload_files\u001b[0;34m(multiple)\u001b[0m\n\u001b[1;32m    127\u001b[0m     result = _output.eval_js(\n\u001b[1;32m    128\u001b[0m         'google.colab._files._uploadFilesContinue(\"{output_id}\")'.format(\n\u001b[0;32m--> 129\u001b[0;31m             output_id=output_id))\n\u001b[0m\u001b[1;32m    130\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'action'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'append'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    131\u001b[0m       \u001b[0;31m# JS side uses a generator of promises to process all of the files- some\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/google/colab/output/_js.py\u001b[0m in \u001b[0;36meval_js\u001b[0;34m(script, ignore_result, timeout_sec)\u001b[0m\n\u001b[1;32m     38\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mignore_result\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0m_message\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_reply_from_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrequest_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_sec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/google/colab/_message.py\u001b[0m in \u001b[0;36mread_reply_from_input\u001b[0;34m(message_id, timeout_sec)\u001b[0m\n\u001b[1;32m     99\u001b[0m     \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_read_next_input_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_NOT_READY\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreply\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 101\u001b[0;31m       \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.025\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    102\u001b[0m       \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m     if (reply.get('type') == 'colab_reply' and\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ],
@@ -131,113 +140,12 @@
     {
       "cell_type": "code",
       "source": [
-        "!pwd"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iprQ5zvIIzCz",
-        "outputId": "287f6cc2-a1c5-4a4f-887d-388f98d50dfe"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "os.environ['KAGGLE_CONFIG_DIR'] = \"/content\""
-      ],
-      "metadata": {
-        "id": "gUnASHbiI2yf"
-      },
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!kaggle competitions download -c amex-default-prediction\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "c4Z59oOsJG_3",
-        "outputId": "2d5a35b8-7615-4cbc-ca1a-1535027979f6"
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /content/kaggle.json'\n",
-            "Downloading amex-default-prediction.zip to /content\n",
-            "100% 20.4G/20.5G [01:55<00:00, 60.2MB/s]\n",
-            "100% 20.5G/20.5G [01:55<00:00, 190MB/s] \n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Next let's unzip the file"
-      ],
-      "metadata": {
-        "id": "3QjFEqqeNlHo"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!unzip /content/amex-default-prediction.zip"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XS1zYGRdJ5_N",
-        "outputId": "56cb7b20-c96d-4fb1-a4df-a336cf42034f"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Archive:  /content/amex-default-prediction.zip\n",
-            "  inflating: sample_submission.csv   \n",
-            "  inflating: test_data.csv           "
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Now let's read the data into our workspace"
-      ],
-      "metadata": {
-        "id": "zO0xC017NoZH"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import pandas as pd\n",
-        "train = pd.read_csv(\"/content/test_data.csv\")\n",
-        "test = pd.read_csv(\"/content/test_data.csv\")\n",
+        "\n",
+        "train = pd.read_feather('/content/train.feather')\n",
+        "#Due to memory constraints we will run this later\n",
+        "#test = pd.read_feather('/content/test.feather')\n",
+        "\n",
         "train_labels = pd.read_csv(\"/content/train_labels.csv\")"
       ],
       "metadata": {
@@ -249,7 +157,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 2.0 Exploratory Data Analysis\n",
+        "### 2.0 Exploratory Data Analysis\n",
         "Let's have a look around the data and take a look at what we're dealing with"
       ],
       "metadata": {
@@ -279,12 +187,114 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Multiple Observations Per Customer**\n",
+        "\n",
+        "Just as the header shows - each customer has many observations (billing periods). We'll need to keep this in mind in the future perhaps when we do feature engineering and pre-processing"
+      ],
+      "metadata": {
+        "id": "5M-eGPs7WO0X"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "train['customer_ID'].nunique()"
+        "unique_customers = train['customer_ID'].nunique()\n",
+        "print(f'There are {unique_customers} customers')\n",
+        "\n",
+        "total_obs = train.shape[0]\n",
+        "print(f'There are {total_obs} observations')"
       ],
       "metadata": {
         "id": "2EZxJpw7OEjz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Class Imbalance**\n",
+        "\n",
+        "It looks like there is also a class imbalance between the defaults and non-defaults. This makes sense - as these individuals are already customers. Presumably AMEX has a criteria to evaluate individuals before they become a customer to make sure they don't default."
+      ],
+      "metadata": {
+        "id": "0AG2YmPFWhPA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import seaborn as sns\n",
+        "sns.set_theme(style=\"darkgrid\")\n",
+        "ax = sns.countplot(x=\"target\", data=train_labels)"
+      ],
+      "metadata": {
+        "id": "eU2De0dMWHGk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3.0 Feature Engineering and Pre-Processing"
+      ],
+      "metadata": {
+        "id": "zPBKndaRban6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Feature engineering function\n",
+        "def process_and_feature_engineer(df):\n",
+        "    # FEATURE ENGINEERING FROM\n",
+        "    # https://www.kaggle.com/code/huseyincot/amex-agg-data-how-it-created\n",
+        "    all_cols = [c for c in list(df.columns) if c not in ['customer_ID', 'S_2']]\n",
+        "    # We know there are categorical features - so let's name those so we can apply a special aggregation\n",
+        "    cat_features = [\"B_30\", \"B_38\", \"D_114\", \"D_116\", \"D_117\", \"D_120\", \"D_126\", \"D_63\", \"D_64\", \"D_66\", \"D_68\"]\n",
+        "    num_features = [col for col in all_cols if col not in cat_features]\n",
+        "\n",
+        "    test_num_agg = df.groupby(\"customer_ID\")[num_features].agg(['median', 'std', 'min', 'max'])\n",
+        "    test_num_agg.columns = ['_'.join(x) for x in test_num_agg.columns]\n",
+        "\n",
+        "    test_cat_agg = df.groupby(\"customer_ID\")[cat_features].agg(['count', 'last', 'nunique'])\n",
+        "    test_cat_agg.columns = ['_'.join(x) for x in test_cat_agg.columns]\n",
+        "\n",
+        "    df = pd.concat([test_num_agg, test_cat_agg], axis=1)\n",
+        "    del test_num_agg, test_cat_agg\n",
+        "    print('shape after engineering', df.shape)\n",
+        "\n",
+        "    return df"
+      ],
+      "metadata": {
+        "id": "ujkow1DbbZ5s"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Running function\n",
+        "train = process_and_feature_engineer(train)\n",
+        "# test = process_and_feature_engineer(test)"
+      ],
+      "metadata": {
+        "id": "AuqzVxvWboYB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n"
+      ],
+      "metadata": {
+        "id": "sy6WPg5Tbk_S"
       },
       "execution_count": null,
       "outputs": []
